--- a/.github/workflows/crawl-volleyball.yml
+++ b/.github/workflows/crawl-volleyball.yml
@@ -39,3 +39,5 @@ jobs:
           git config --local user.name "GitHub Action"
           git add public/data/volleyball-detail.json public/data/sports.json
           git diff --staged --quiet || (git commit -m "chore: update volleyball data [skip ci]" && git push)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
