--- a/.github/workflows/crawl-baseball.yml
+++ b/.github/workflows/crawl-baseball.yml
@@ -8,6 +8,9 @@ on:
     - cron: '0 1 * 11-12,1-2 * 1'  # UTC 기준 월요일 01:00 (KST 10:00)
   workflow_dispatch:  # 수동 실행 가능
 
+permissions:
+  contents: write
+
 jobs:
   crawl:
     runs-on: ubuntu-latest
@@ -38,3 +41,5 @@ jobs:
           git config --local user.name "GitHub Action"
           git add public/data/baseball-detail.json public/data/sports.json
           git diff --staged --quiet || (git commit -m "chore: update baseball data [skip ci]" && git push)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
