--- a/.github/workflows/update-season-config.yml
+++ b/.github/workflows/update-season-config.yml
@@ -8,6 +8,9 @@ on:
     - cron: '0 1 15 9 *'  # UTC 기준 9월 15일 01:00 (KST 10:00)
   workflow_dispatch:  # 수동 실행 가능
 
+permissions:
+  contents: write
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -38,3 +41,5 @@ jobs:
           git config --local user.name "GitHub Action"
           git add public/data/season-config.json
           git diff --staged --quiet || (git commit -m "chore: update season config [skip ci]" && git push)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
