--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "crawl:baseball": "node crawl-baseball.js",
+    "crawl:volleyball": "node crawl-volleyball.js",
+    "crawl:events": "node crawl-major-events.js",
+    "crawl:all": "npm run crawl:baseball && npm run crawl:volleyball && npm run crawl:events"
   },
   "dependencies": {
     "react": "^18.2.0",
