--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     timeout-minutes: 20
+    concurrency:
+      group: github-pages
+      cancel-in-progress: true
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
