fix: remove [skip ci] from crawler commits to enable auto-deployment

--- a/.github/workflows/crawl-baseball.yml
+++ b/.github/workflows/crawl-baseball.yml
@@ -45,7 +45,7 @@ jobs:
           fi
           # 변경사항이 있을 때만 커밋 및 푸시
           if ! git diff --staged --quiet; then
-            git commit -m "chore: update baseball data [skip ci]"
+            git commit -m "chore: update baseball data"
             git push
           else
             echo "No changes to commit"
