--- a/.github/workflows/crawl-major-events.yml
+++ b/.github/workflows/crawl-major-events.yml
@@ -39,7 +39,7 @@ jobs:
           fi
           # 변경사항이 있을 때만 커밋 및 푸시
           if ! git diff --staged --quiet; then
-            git commit -m "chore: update major events data [skip ci]"
+            git commit -m "chore: update major events data"
             git push
           else
             echo "No changes to commit"
