--- a/.github/workflows/crawl-volleyball.yml
+++ b/.github/workflows/crawl-volleyball.yml
@@ -45,7 +45,7 @@ jobs:
           fi
           # 변경사항이 있을 때만 커밋 및 푸시
           if ! git diff --staged --quiet; then
-            git commit -m "chore: update volleyball data [skip ci]"
+            git commit -m "chore: update volleyball data"
             git push
           else
             echo "No changes to commit"
