feat: add 9AM KST crawl schedule

--- a/.github/workflows/crawl-international-sports.yml
+++ b/.github/workflows/crawl-international-sports.yml
@@ -2,10 +2,10 @@ name: Crawl International Sports
 
 on:
   schedule:
-    # 이탈리아 오전 9시부터 4시간 간격으로 하루 4번 (UTC: 08:00, 12:00, 16:00, 20:00)
-    # 이탈리아: 09:00, 13:00, 17:00, 21:00 (UTC+1)
-    # 한국: 17:00, 21:00, 01:00, 05:00 (UTC+9)
-    - cron: '0 8,12,16,20 * * *'
+    # 하루 5번 크롤링 (UTC: 00:00, 08:00, 12:00, 16:00, 20:00)
+    # 이탈리아: 01:00, 09:00, 13:00, 17:00, 21:00 (UTC+1)
+    # 한국: 09:00, 17:00, 21:00, 01:00, 05:00 (UTC+9)
+    - cron: '0 0,8,12,16,20 * * *'
   workflow_dispatch:  # 수동 실행 가능
 
 permissions:
